# social-network-simulator

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.streamlit/: config.toml
docs/: report-zh.md
examples/: demo.py
notebooks/: test_temporal_graph.ipynb
scripts/: simulate_twitter.py
src/examples/: demo.py
src/notebooks/: check_simu_db.ipynb  test_agent_tool.ipynb  test_temporal_graph.ipynb
src/sns/: simulation.py
src/sns/utils/: graph.py  models.py  temporal_graph.py
src/sonetsim/: simulation.py
src/sonetsim/utils/: animation.py  temporal_graph.py
